@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2014-01-17 Steve
+	* Changed default value of susyFinalState to 0 to be consistent with SUSYTools
+
 2013-12-26 Davide
 	* Tagging SusyCommon-00-01-04
 
